fix: adjust info column to be overflow scroll

--- a/skirunmap/src/App.css
+++ b/skirunmap/src/App.css
@@ -6,3 +6,24 @@
     height: calc(100vh - 64px);
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c9c9c9;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
